doc: minor documentation changes for functions and tags for package.json

--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "build": "tsc && yarn build:prepend && yarn build:append && yarn build:move && yarn build:make-execute && yarn build:cleanup"
   },
   "author": "Pedro Palhari",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": ["json", "jq", "mapping"]
 }
